--- a/config.toml
+++ b/config.toml
@@ -95,3 +95,7 @@ paginate = 5
         identifier = "music"
         name = "music"
         url = "/music"
+      [[languages.en.menu.main]]
+        identifier = "friends"
+        name = "friends"
+        url = "/friends"
