--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ paginate = 5
   showLastUpdated = false
 
   # set a custom favicon (default is a `themeColor` square)
-  favicon = '/static/favicon.ico'
+  favicon = 'favicon.ico'
 
   # Provide a string as a prefix for the last update date. By default, it looks like this: 2020-xx-xx [Updated: 2020-xx-xx] :: Author
   # updatedDatePrefix = "Updated"
