--- a/config.toml
+++ b/config.toml
@@ -80,7 +80,7 @@ paginate = 5
 
     [languages.en.params.logo]
       logoText = "nori"
-      logoHomeLink = "/index"
+      logoHomeLink = "/"
 
     [languages.en.menu]
       [[languages.en.menu.main]]
