--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,12 @@ languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
 theme = "terminal"
-paginate = 5
+paginate = 50
 
 [params]
+  # this should show the full content, but it doesn't
+  # showFullContent = true
+
   # dir name of your main content (default is `content/posts`).
   # the list of set content will show up on your index page (baseurl).
   contentTypeName = "posts"
